--- a/3.6_anchor_posts.md
+++ b/3.6_anchor_posts.md
@@ -18,7 +18,7 @@ submenu: true
 
 Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка (входит в комплект поставки) для присоединения средств индивидуальной защиты от падения с высоты.  Для столба высотой 0,8 м - 1 м  дополнительно предусмотрены ребра жесткости в основании устройства.   
  
-` ` **Характеристики:**  
+#### Характеристики:    
 **Материал:** гальванизированная сталь  
 **Высота столба:** 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
 **Количество пользователей:** 2  
@@ -30,77 +30,77 @@ submenu: true
 ***ФОТО***
 
 Представляет собой анкерное устройство класса B и предназначен для монтажа охватом на несущие балки конструкции (например, подкровельные).       
-` ` **Характеристики:**  
-Материал: гальванизированная сталь с полимерным покрытием  
-Высота столба: 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
-Количество пользователей: 2  
-Статическая прочность: 24 кН  
-Размер балки: высота 120 - 780 мм, ширина - до 300 мм
+#### Характеристики:  
+**Материал:** гальванизированная сталь с полимерным покрытием  
+**Высота столба:** 0,2 м/ 0,4 м/ 0,8 м/ 1 м  
+**Количество пользователей:** 2  
+**Статическая прочность:** 24 кН  
+**Размер балки:** высота 120 - 780 мм, ширина - до 300 мм
  
  
-#### Анкерный столб, многогранный (арт. AP-8h)  
+#### **Анкерный столб, многогранный** (арт. AP-8h)  
 ***ФОТО***
 
-` ` Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров. Монтаж на балки осуществляется при помощи ответной пластины и шпилек.       
+Представляет собой анкерное устройство класса А и предназначен для организации анкерной точки на элементах постоянных конструкций: стальных - установка при помощи болтовых элементов М12, бетонных - при помощи химических/механических анкеров. Монтаж на балки осуществляется при помощи ответной пластины и шпилек.       
 #### Характеристики:  
-Материал: нержавеющая сталь  
-Количество пользователей: 2  
-Статическая прочность: 24 кН  
+**Материал:** нержавеющая сталь  
+**Количество пользователей:** 2  
+**Статическая прочность:** 24 кН  
  
  
-#### Анкерный столб "ТИТАН 200" (арт. AP-T200)  
+#### **Анкерный столб "ТИТАН 200"** (арт. AP-T200)  
 ***ФОТО***
 
-` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.     
+Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.     
 #### Характеристики:  
-Материал: титан  
-Высота столба: 2 м  
-Количество пользователей: 1  
-Статическая прочность: мин. 24 кН
+**Материал:** титан  
+**Высота столба:** 2 м  
+**Количество пользователей:** 1  
+**Статическая прочность:** мин. 24 кН
  
  
-#### Анкерный столб "ТИТАН 200 b" (арт. AP-T200b)
+#### **Анкерный столб "ТИТАН 200 b"** (арт. AP-T200b)
 ***ФОТО***
 
-` ` Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.       
+Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.       
 #### Характеристики:  
-Материал столба: титан  
-Материал базы: сталь  
-Высота столба: 2 м  
-Количество пользователей: 1 (при использовании в комплекте для разъединителей с гибкой анкерной линией - 2)  
-Статическая прочность: мин. 24 кН
+**Материал столба:** титан  
+**Материал базы:** сталь  
+**Высота столба:** 2 м  
+**Количество пользователей:** 1 (при использовании в комплекте для разъединителей с гибкой анкерной линией - 2)  
+**Статическая прочность:** мин. 24 кН
  
  
-#### Анкерный столб AP-S200 (арт. AP-S200)
+#### **Анкерный столб AP-S200** (арт. AP-S200)
 ***ФОТО***
 
-` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.      
+Представляет собой анкерное устройство класса A и предназначен для монтажа на вертикальные, горизонтальные и наклонные поверхности. На конце столба устанавливается анкерная точка для присоединения средств индивидуальной защиты от падения с высоты.  Монтируется как на бетонные, так и стальные поверхности.      
 #### Характеристики:  
-Материал: оцинкованная сталь  
-Высота столба: 2 м  
-Количество пользователей: 2  
-Статическая прочность: мин. 24 кН  
+**Материал:** оцинкованная сталь  
+**Высота столба:** 2 м  
+**Количество пользователей:** 2  
+**Статическая прочность:** мин. 24 кН  
  
  
-#### Анкерный столб AP-S200b (арт. AP-S200b)
+#### **Анкерный столб AP-S200b** (арт. AP-S200b)
 ***ФОТО***
 
-` ` Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.        
+Представляет собой анкерное устройство класса B и предназначен для монтажа на опоры любого сечения с размерами одной из сторон не более 600 мм.        
 #### Характеристики:  
-Материал: оцинкованная сталь  
-Высота столба: 2 м  
-Количество пользователей: 2  
-Статическая прочность: мин. 24 кН  
+**Материал:** оцинкованная сталь  
+**Высота столба**: 2 м  
+**Количество пользователей:** 2  
+**Статическая прочность:** мин. 24 кН  
  
  
-#### Анкерный столб для кровли (арт. AP-R10)
+#### **Анкерный столб для кровли** (арт. AP-R10)
 ***ФОТО***
 
-` ` Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.). Крепление к поверхности осуществляется при помощи саморезов.   
+Представляет собой анкерное устройство класса A и предназначен для монтажа на мягкие кровли (сэндвич-панель, профлист и т.д.). Крепление к поверхности осуществляется при помощи саморезов.   
 #### Характеристики:  
-Материал: нержавеющая сталь  
-Количество пользователей: 2  
-Статическая прочность: мин. 24 кН  
+**Материал:** нержавеющая сталь  
+**Количество пользователей:** 2  
+**Статическая прочность:** мин. 24 кН  
  
  
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
