--- a/4.0_info.md
+++ b/4.0_info.md
@@ -51,7 +51,7 @@ submenu: false
 
 
 ## Какие документы получаем по окончанию обследования.
-__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  
+__ТЕХ__  
 - Техническое заключение составляется согласно ГОСТ __[31937-2011]({% link Bufer tekst/6.1.4.1. GOST_31937-2011.pdf %})__     
 - В которые входят данные осмотра, фото и видео материалы.  
 - В заключении будут отображены выявленные дефекты.   
