--- a/4.0_info.md
+++ b/4.0_info.md
@@ -52,7 +52,7 @@ submenu: false
 
 ## Какие документы получаем по окончанию обследования.
 __ТЕХ__  
-- Техническое заключение составляется согласно ГОСТ __[31937-2011]({% link Bufer tekst/6.1.4.1. GOST_31937-2011.pdf %})__     
+- Техническое заключение составляется согласно ГОСТ      
 - В которые входят данные осмотра, фото и видео материалы.  
 - В заключении будут отображены выявленные дефекты.   
 - К заключению прилагаются рекомендации по устранению выявленных дефектов.  
