--- a/4.0_info.md
+++ b/4.0_info.md
@@ -51,7 +51,7 @@ submenu: false
 
 
 ## Какие документы получаем по окончанию обследования.
-__ТЕХ__  
+__[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__    
 - Техническое заключение составляется согласно ГОСТ      
 - В которые входят данные осмотра, фото и видео материалы.  
 - В заключении будут отображены выявленные дефекты.   
