--- a/4.0_info.md
+++ b/4.0_info.md
@@ -52,7 +52,7 @@ submenu: false
 
 ## Какие документы получаем по окончанию обследования.
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__    
-- Техническое заключение составляется согласно ГОСТ      
+- Техническое заключение составляется согласно ГОСТ {% include el-pdf.html text="31937-2011" name="6.1.4.1. GOST_31937-2011.pdf" %}        
 - В которые входят данные осмотра, фото и видео материалы.  
 - В заключении будут отображены выявленные дефекты.   
 - К заключению прилагаются рекомендации по устранению выявленных дефектов.  
