--- a/4.0_info.md
+++ b/4.0_info.md
@@ -39,14 +39,14 @@ submenu: false
 - в) Комплексная — проводится специалистом или специалистами обладающими познаниями в разных отраслях.  
 
 **2. По последовательности проведения**  
-       а) Визуальное обследование – это осмотр строительных конструкций (фасадных или внутренних поверхностей) с целью выявления наличия видимых дефектов, повреждений или деформаций с нанесением их мест на масштабные схемы и фотофиксацией.  
-       б) Детальное или инструментальное обследование зданий и сооружений - это следующая стадия обследования, которая выполняется после и на основании визуального осмотра.     
+- а) Визуальное обследование – это осмотр строительных конструкций (фасадных или внутренних поверхностей) с целью выявления наличия видимых дефектов, повреждений или деформаций с нанесением их мест на масштабные схемы и фотофиксацией.  
+- б) Детальное или инструментальное обследование зданий и сооружений - это следующая стадия обследования, которая выполняется после и на основании визуального осмотра.     
      ***Инструментальному обследованию подлежат конструкции с явно выраженными дефектами и разрушениями, обнаруженными при визуальном осмотре***
  
 **3. По назначению**  
-       а) Первоначальное обследование — обследование, проводимое в отношении определённого объекта, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению.   
-       б) Повторное обследование — обследование, проводимое по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.   
-       в) Промежуточное обследование – обследование, проводимое на разных завершенных этапах строительных работ, решает круг вопросов, связанных с качеством и объёмом выполненных работ на промежуточном этапе.
+- а) Первоначальное обследование — обследование, проводимое в отношении определённого объекта, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению.   
+- б) Повторное обследование — обследование, проводимое по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.   
+- в) Промежуточное обследование – обследование, проводимое на разных завершенных этапах строительных работ, решает круг вопросов, связанных с качеством и объёмом выполненных работ на промежуточном этапе.
 
 
 
