--- a/4.0_info.md
+++ b/4.0_info.md
@@ -67,3 +67,6 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 5) Получение заключения по результатам проведенного обследования.  
 
 ***Из всего выше указанного можно сделать вывод, что обследование – это очень эффективный способ получения информации об объекте обследования, основанный на высокой квалификации специалистов и технических достижениях.***
+
+## **History работ**
+
