--- a/6.1.2.2_final_step.md
+++ b/6.1.2.2_final_step.md
@@ -6,3 +6,15 @@ submenu: false
 layout: buffer
 ---
 
+## Завершающий этап проверки.
+Завершающим этапом проверки крыш является техническое заключение, в которое входит: 
+
+1)	Этапы работы.   
+2)	Результаты обследования.  
+3)	Схема расположения выявленных дефектов кровли (Карта дефектов на кровле).  
+4)	Описание найденных нарушений, дефектная ведомость.  
+5)	Фотофиксация состояния кровли и найденных нарушений.  
+6)	Рекомендации.  
+
+
+#### Карта дефектов на кровле:
