--- a/6.1.2.3_Buckleys.md
+++ b/6.1.2.3_Buckleys.md
@@ -6,3 +6,40 @@ submenu: false
 layout: buffer
 ---
 
+***ФОТО***
+
+## Мокрые Крыши Про
+**Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
+**Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
+
+***ФОТО***
+
+` ` Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.  
+
+` ` Утечки в мембране крыши позволяют воде проникать в структуру здания, создавая короткое замыкание. Блок детектора соединен с двумя ручными тестовыми зондами, которые удерживаются в контакте с поверхностью крыши.  
+
+` ` **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
+
+***ФОТО***
+
+**Особенности**
+* Тест до 400 м2 в день  
+* Точечные утечки, которые слишком малы, чтобы найти невооруженным глазом  
+* Направляет оператора к дефекту кровли  
+* Простота настройки и использования  
+* Тест на протечки круглый год  
+* Способный испытывать любую толщину мембраны  
+* Дискретная звуковая сигнализация  
+
+
+**Технические характеристики**  
+* Напряжение тока импульс выхода: DC 32V  
+* Выходная мощность: <10 Вт  
+* Максимальная относительная влажность: 80% без конденсации  
+* Рабочая высота: до 2000 м  
+* Диапазон температур от +4°C до +40°C  
+
+
+***ФОТО***  
+***ФОТО***  
+***ФОТО***
