--- a/6.1.2.2_final_step.md
+++ b/6.1.2.2_final_step.md
@@ -6,8 +6,8 @@ submenu: false
 layout: buffer
 ---
 
-## Завершающий этап проверки.
-Завершающим этапом проверки крыш является техническое заключение, в которое входит: 
+
+### Завершающим этапом проверки крыш является техническое заключение, в которое входит: 
 
 1)	Этапы работы.   
 2)	Результаты обследования.  
