--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -24,6 +24,8 @@ submenu: true
 * Завершающий этап проверки [(Карта дефектов на кровле)]({% link 6.1.2.2_final_step.md %})  
 * Детектор протечек [Buckleys Wet Roof Pro’]({% link 6.1.2.3_Buckleys.md %})
 
+## ***ВСТАВИТЬ ВИДЕО***
+
 #### 2. Нахождение мест протечек листовых и мягких кровель.  
 ![](/img/0/1.2.2.6000.jpg)
 *    Визуальное обследование, нахождение причин протечек.   
