--- a/1.1_facades.md
+++ b/1.1_facades.md
@@ -13,13 +13,14 @@ __Комплекс по обследованию фасада производи
 
 __Вид обследования:__  
 1. Первоначальное обследование фасада, до проведения ремонтных или иных работ, решающая круг вопросов связанных с определением работ необходимых к выполнению. 
-2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ. 
-    - Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).
-    - Обследование межпанельных швов в панельных зданиях.
-    - Тепловизионное обследование.
+2. Повторное Инспекционное обследование фасада, проводимая по тем же объектам и решающая вопросы с качеством и объёмом выполненных работ.   
+- Детальное, визуально-инструментальное обследование фасада здания. (точное определения конкретных дефектов: растрескивание, сколы, отслоение, обнаружить причины протечки).  
+- Обследование межпанельных швов в панельных зданиях.  
+- Тепловизионное обследование.
  
+###### отменяет действие align-left и align-right
 
-### Что диагностируем.
+### **Что диагностируем.**
 - Неразрушающий контроль бетона Ультразвуковой метод определяем: глубины и размера трещин; качества бетонирования; возможных дефектов. Наличие пустот в бетоне или в штукатурном слое. 
 - Обнаружение коррозии (ржавчина, окисел, патина)
 - Состояние теплоизоляции на теплопотери.
@@ -32,7 +33,7 @@ __Вид обследования:__
 - Состояние анкерных креплений, мачтовых канатов оттяжек (на наличие коррозии, прочность соединения)
 
 
-### Что вам даст обследование фасада.  
+### **Что вам даст обследование фасада.**  
 1. Достоверную информацию, на основании которой вы будете принимать решения.
 2. Заключение который будет является доказательством, свидетельствующим о наличии / отсутствии интересующих фактических данных в разрешении того или иного вопроса.
 3. Ценную информацию для формирования технического задания.
@@ -40,7 +41,7 @@ __Вид обследования:__
 5. Сверку проектной (исполнительной) документации с выполненными работами.
 6. Полученная информация поможет сэкономить ваш бюджет.
 
-#### Какие документы получаем по окончанию обследования.  
+#### **Какие документы получаем по окончанию обследования.**  
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__  
 * Техническое заключение составляется согласно __ГОСТ 31937-2011.__  
 * В которые входят данные осмотра, фото и видео материалы.  
