--- a/1.2_roof_diag.md
+++ b/1.2_roof_diag.md
@@ -7,7 +7,8 @@ submenu: true
 
 ` ` Исследования, проведенные нашими специалистами, позволят выявить дефекты кровли, причины протечек, фактическое состояние конструкций кровли, определить необходимый объем ремонтных работ, испытания материалов кровли (изоляции, утеплителя, несущих конструкций), и многое другое.
 
-#### 1. Нахождение мест протечек мембранной кровли.  
+###### отменяет действие align-left и align-right
+### **1. Нахождение мест протечек мембранной кровли.**  
 ![](/img/0/1.2.1.0.6000.jpg)   
 
 ` ` Вашему вниманию предоставляем новейший метод нахождения протечек кровли - __[Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.    
@@ -26,38 +27,45 @@ submenu: true
 
 ## ***ВСТАВИТЬ ВИДЕО***
 
-#### 2. Нахождение мест протечек листовых и мягких кровель.  
+###### отменяет действие align-left и align-right
+### **2. Нахождение мест протечек листовых и мягких кровель.**  
 ![](/img/0/1.2.2.6000.jpg)
 *    Визуальное обследование, нахождение причин протечек.   
 *    Инструментальное обследование, которое выполняется после и на основании визуального осмотра.
 
-#### 3. Качество монтажа кровельных материалов.  
+###### отменяет действие align-left и align-right
+### **3. Качество монтажа кровельных материалов.**  
 ![](/img/0/1.2.3.6000.jpg)  
 
 ` ` Даже, на первый взгляд, незначительные неточности монтажа кровельных материалов могут в разы уменьшить эксплуатационные свойства как отдельных материалов, так и конструкции кровли в целом. Чтобы избежать протечки кровли, либо ее частичное или полное разрушение, в любое удобное для Вас время к Вам на объект выезжают специалисты в области кровельных работ для контроля качества выполненных работ.
 
-#### 4. Определение мест утечки тепла.  
+###### отменяет действие align-left и align-right
+### **4. Определение мест утечки тепла.**  
 ВСТАВИТЬ ФОТО     
 
 ` ` Одним из важных свойств кровельных систем является сохранение тепла помещений дома. Для диагностики мест тепловых аномалий кровли (мест утечки тепла) мы используем телевизоры последнего поколения, способные уловить малейшие скачки темперы. По результатам обследования кровли тепловизером вы получаете термограмму, на которой ясно видны области потери тепла. Качественно утеплив кровлю, вы значительно уменьшите расход потребляемого тепла и сохраните бюджет.
 
-#### 5. Опорные металлические конструкции.  
+###### отменяет действие align-left и align-right
+### **5. Опорные металлические конструкции.**  
 ВСТАВИТЬ ФОТО  
 
 ` ` Металлические конструкции, так же требуют особого внимания. Некачественно выполненные сварные швы могут значительно повлиять на несущую конструкцию как отдельных элементов, так и всей системы кровли.  
 
 ` ` Для предотвращения коррозии металлические конструкции должны обрабатываться специальными составами, а правила пожарной безопасности обязывают наносить огнеупорные составы на поверхности несущих конструкций из металла. Контроль качества сварных швов, качество нанесение защитного и огнеупорного состава, контроль выполнения сварных работ.
 
-#### 6. Несущая способность кровли.    
+###### отменяет действие align-left и align-right
+### **6. Несущая способность кровли.**    
 
 ` ` Определение несущей способности кровли производится путем комплексного обследования несущих конструкций кровли, определения их прочностных характеристик, конструктивных особенностей и сбора существующих нагрузок. 
 
-#### 7. Деревянная конструкция кровли.
+###### отменяет действие align-left и align-right
+### **7. Деревянная конструкция кровли.**
 ![](/img/0/1.2.7.6000.1.jpg)    
 
 ` ` Деревянная кровля одна из наиболее распространенных конструкций кровли требующая значительного внимания. Неправильная сушка древесины, избыточная влажность, отсутствие обработки, наличие плесени, грибка - всё это способно за короткое время привести материал в непригодность. Вызов специалиста поможет вам узнать фактическое качество древесины. Так же, при наличии любых видов дефектов и недостатков, эксперты специально для Вас разработают мероприятия для того, чтобы ваша кровля прослужила вам как можно дольше.
 
-#### 8. Инфракрасная термография.    
+###### отменяет действие align-left и align-right
+### **8. Инфракрасная термография.**    
 ВСТАВИТЬ ФОТО  
 
 ` ` Метод обнаружения скопления влаги под кровельным покрытием.   
@@ -66,7 +74,7 @@ submenu: true
 ` ` Во время продолжительной солнечной погоды без осадков, поверхность в утренние часы специально обильно поливается водой, чтобы та проникла через все дефекты и скопилась под поверхностью гидроизоляции. Тепловизором обследуется и снимается вся поверхность сплошным методом с последующей склейкой в панорамные ИК-изображения для четкой идентификации аномалий по месту. Найденные дефекты маркируются и снимаются крупным планом. Указанный метод позволяет с достаточной точностью определить границы зоны проникновения влаги в верхние слои кровельного "пирога", но не дает возможности указать точное место повреждения (протечки).
 
 
-### Что вам даст обследование кровли.
+### **Что вам даст обследование кровли.**
 1. Достоверную информацию, на основании которой вы будете принимать решения.  
 2. Ценную информацию для формирования технического задания.  
 3. На основании полученной информации можно планировать дальнейшую работу.   
@@ -78,7 +86,7 @@ submenu: true
 9. Полученная информация поможет сэкономить ваш бюджет.  
 
 
-### Какие документы получаем по окончанию обследования
+### **Какие документы получаем по окончанию обследования.**
 __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})__ который будет является доказательством, свидетельствующим о наличии / отсутствии интересующих фактических данных в разрешении того или иного вопроса.
 
 Техническое заключение составляется согласно __ГОСТ 31937-2011.__    
@@ -88,7 +96,7 @@ __[Техническое заключение:]({% link 1.4_Tech_conclus.md %})
 * На бумажном носителе в 2-х (двух) экземплярах.  
 * В электронном виде (сканировании копия в формате PDF).  
 
-*техническое заключение формируется на основании технического задания.
+**техническое заключение формируется на основании технического задания.**
 
 ___В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.___
 
