--- a/1.3_.md
+++ b/1.3_.md
@@ -5,7 +5,7 @@ sortid: 1.3
 submenu: true
 ---
 
-### Нужен доступ?   
+### **Нужен доступ?**   
 ` ` Высота, стесненные условия, труднодоступные зоны все это не имеет значения. **Мы обеспечим Вам доступ!**  
 
 ` ` Опыт в управлении сложными работами на высоте, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.  
@@ -14,8 +14,8 @@ submenu: true
 
 ` ` *Мы следуем правилам техники безопасности, а также учитываем правила техники безопасности, установленные на Вашем объекте.*
 
-
-### Что обследуем?
+###### отменяет действие align-left и align-right
+### **Что обследуем?**
 - Высотные здания и сооружения. 
 - Зданий до и после ремонта.
 - Кровли.
@@ -36,7 +36,7 @@ submenu: true
 - Нефтехранилища (резервуары).
 - Водонапорные башни.
 
-### Что диагностируем.
+### **Что диагностируем.**
 - Конструкций на загрязненность.
 - Целостность конструкций.
 - Состояние лакокрасочного покрытия, толщины.
@@ -50,5 +50,5 @@ submenu: true
 - Обнаружение коррозии (ржавчина, окисел, патина)
 - Состояние теплоизоляции на теплопотери.
 
-*Все работы производятся с упором на богатейший опыт в оценки риска, методологии работы на высоте, а также по процедурам анализа окружающей обстановки.*
+***Все работы производятся с упором на богатейший опыт в оценки риска, методологии работы на высоте, а также по процедурам анализа окружающей обстановки.***
 
