--- a/1.5_nondestruct_lab.md
+++ b/1.5_nondestruct_lab.md
@@ -5,7 +5,7 @@ sortid: 1.5
 submenu: true
 ---
 
-### 1. Визуальный неразрушающий контроль.
+### **1. Визуальный неразрушающий контроль.**
 
 ` ` Визуальный и измерительный контроль является самым простым и в то же время эффективным методом неразрушающего контроля. Этот метод предшествует остальным способам дефектоскопии и является базовым.  
 Визуальный неразрушающий контроль проводится чтобы выявить поверхностные дефекты металла, трещины, подрезы, забоины, шлаковые включения, сварные брызги и прочие дефекты.  
@@ -16,16 +16,17 @@ submenu: true
 
        
        
-
+###### отменяет действие align-left и align-right
 ### 2. __[Электро-векторное картирование]({% link 6.1.2.0_evk.md %})__    
 (вставить фото)
 
+###### отменяет действие align-left и align-right
 ` ` Вашему вниманию предоставляем новейший метод нахождения протечек кровли - **Электро-векторное картирование**, который позволяет локализовать дефекты гидроизоляции с точность до 1 мм.
 
 ` ` Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия.    
     На сегодняшний день **ЭВК - единственный наиболее эффективный способ** находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
-### 3. Ультразвуковой неразрушающий контроль.
+### **3. Ультразвуковой неразрушающий контроль.**
 
 ` ` Ультразвуковая толщинометрия – наиболее прогрессивный метод неразрушимого контроля. Позволяет эффективно проводить исследования на различных объектах, без приостановления их эксплуатации, а также при доступе к объекту с одной стороны. Гарантированно даёт результат с минимальной погрешностью. Является безальтернативным методам, если доступ к объекту есть только с одной стороны.
 
@@ -40,7 +41,7 @@ submenu: true
 *Проводится сертифицированными специалистами, имеющими II или III уровень квалификации и имеющими право подписи документов.*
   -  инструмент-Ультразвуковой дефектоскоп. 
   
-### 4. Ударно-импульсное исследование прочностных характеристик.
+### **4. Ударно-импульсное исследование прочностных характеристик.**
 
 ` ` Принцип работы ударно-импульсного оборудования заключается в проверке показателей твердости и упругости строительной конструкции с помощью ударного импульса. Для этого проводится серия ударов  в одно место поверхности стройконструкции. Далее прибор производит пересчет полученных значений и определяет средний показатель. На основании полученного показателя и определяется фактическая марка бетона строительной конструкции.
 
@@ -59,7 +60,8 @@ submenu: true
 
 ` ` Главным достоинством данной методики является его простота и возможность работы в сложных условиях. Однако следует учитывать, что полученных данных недостаточно для экспертной оценки прочности бетона.  Для этого необходимы другие методики контроля, в частности отрыв со скалыванием.
 
-### 5. Тепловизионное обследование.  
+###### отменяет действие align-left и align-right
+### **5. Тепловизионное обследование.**  
 ВСТАВИТЬ ФОТО
 
 ` ` Тепловизионное обследование – это уникальный неразрушающий метод, действия по которому выполняются в соответствии с **ГОСТ Р** 
