--- a/2.0_access.md
+++ b/2.0_access.md
@@ -11,10 +11,10 @@ submenu: true
 Для предоставления доступа Вашему специалисту в труднодоступное место, мы разработаем и установим безопасный путь.   
 Возможна установка временного или постоянного, безопасного пути на вашем объекте.
 
+###### отменяет действие align-left и align-right
+### **Инженерное сооружение.**
 
-### Инженерное сооружение
-
-` ` Труднодоступное инженерное проектирование - это наша специальность.   
+Труднодоступное инженерное проектирование - это наша специальность.   
 - **Проводим проверку и обслуживания** систем безопасности высоты, а так-же разрабатываем решения для доступа, включая анкерные линии, дорожки, поручни и лестницы.  
 - **Конструирование:** дюльфер, анкерные системы для удовлетворения наиболее сложных или удаленных структур.   
 - **Разработаем систему**, которая превратит ваши худшие, труднодоступные зоны в доступные области. Это включает в себя установку лебедок и такелаж.  
@@ -24,12 +24,12 @@ submenu: true
 - Проведем инструктаж по технике безопасности, методам работы со спец снаряжением.
 - Обеспечим сопровождение Вашего сотрудника на всем протяжении маршрута. 
  
-### Безопасность
+### **Безопасность.**
 
 ` ` Обладая многолетним практическим опытом, разрабатываем решения по обеспечению безопасности на высоте, применяя новые производственные технологии, методологии и инновации в области СИЗ, чтобы помочь операторам и специалистам по безопасности ориентироваться и производить практические шаги для управления опасностями, возникающими при работе на высоте.
 
-### Безопасность Высоты и оценка рисков
+### **Безопасность Высоты и оценка рисков.**
 
 ` ` Команда компании уделяет большое внимание вопросам безопасности и оценки рисков, и благодаря тому, что сотрудники активно работают в этих условиях, мы обладаем практическими знаниями и глубоким пониманием характеристик, опасностей и законодательных требований, необходимых для безопасной эксплуатации. Эта приверженность безопасности и опыт эксплуатации позволяют компании предоставлять экспертные консультационные услуги в условиях повышенного риска.
 
-*Мы гибки и быстры, и мы можем проектировать решения для сложных ситуаций.*
+***Мы гибки и быстры, и мы можем проектировать решения для сложных ситуаций.***
