--- a/2.1_.md
+++ b/2.1_.md
@@ -6,8 +6,9 @@ submenu: true
 ---
 
 ` ` Опасным производственным фактором работ на высоте является расположение рабочего места на высоте от земли, пола или другой поверхности и связанная с этим возможность падения работника с высоты или падения предметов на работника.
- 
-` ` **К работам на высоте относятся работы, при которых:**
+
+###### отменяет действие align-left и align-right
+### **К работам на высоте относятся работы, при которых:**
 
 - а) существуют риски, связанные с возможным падением работника с высоты 1,8 м и более, в том числе:  
 при осуществлении работником подъема на высоту более 5 м, или спуска с высоты более 5 м по лестнице, угол наклона которой к горизонтальной поверхности составляет более 75°;  
@@ -15,7 +16,7 @@ submenu: true
 - б) существуют риски, связанные с возможным падением работника с высоты менее 1,8 м, если работа проводится над машинами или механизмами, поверхностью жидкости или сыпучих мелкодисперсных материалов, выступающими предметами.
 (п. 3. Приказа от 28 марта 2014 г. {% include el-pdf.html text="N 155н" name="N 155н.pdf" %} ОБ УТВЕРЖДЕНИИ ПРАВИЛ ПО ОХРАНЕ ТРУДА ПРИ РАБОТЕ НА ВЫСОТЕ (в ред. Приказа Минтруда России от 17.06.2015 N 383н))
 
-` ` **В зависимости от условий производства все работы на высоте делятся на:**
+### **В зависимости от условий производства все работы на высоте делятся на:**
 
 - а) работы на высоте с применением средств подмащивания (например, леса, подмости, вышки, люльки, лестницы и другие средства подмащивания), а также работы, выполняемые на площадках с защитными ограждениями высотой 1,1 м и более;
 - б) работы без применения средств подмащивания, выполняемые на высоте 5 м и более, а также работы, выполняемые на расстоянии менее 2 м от неогражденных перепадов по высоте более 5 м на площадках при отсутствии защитных ограждений либо при высоте защитных ограждений, составляющей менее 1,1 м.
@@ -27,7 +28,7 @@ submenu: true
 
 ` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
 
-*Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах.* 
+***Мы специализируемся на проектировании безопасных систем доступа на высоте и в труднодоступных местах.*** 
 
 ***ВСТАВИТЬ ИСТОРИЮ РАБОТ НА ВЫСОТЕ***  
 **ФОТО**
