--- a/2.2_.md
+++ b/2.2_.md
@@ -5,14 +5,15 @@ sortid: 2.2
 submenu: true
 ---
 
-#### Что такое замкнутое пространство?  
+### **Что такое замкнутое пространство?**  
 Закрытое или частично закрытое пространство, которое находится под атмосферным давлением во время использования и не предназначается или первоначально не было спроектировано как место работы, и подвержено в любое время:  
 Воздействию атмосферы, содержащей потенциально чрезмерные уровни загрязнения;  
 Недостатку кислорода или его избыточному содержанию;  
 Может стать причиной поглощения;  
 Может иметь ограниченные средства для входа и выхода.
 
-#### Примеры замкнутых пространств: 
+###### отменяет действие align-left и align-right
+### **Примеры замкнутых пространств:** 
 Резервуары для хранения, автоцистерны, котлы, бункеры, трубопроводы и другие отсеки резервуарного типа;  
 Открытые: полости, ямы;  
 Стволы шахт и тоннели;  
@@ -23,14 +24,14 @@ submenu: true
 - Спуск;  
 - Спасательные работы.
 
-#### Вход через точку доступа.  
+### **Вход через точку доступа.**  
 ` ` Любой вход в замкнутое пространство сопряжен с возникновением опасной атмосферой, поэтому перед выполнением любых работ, связанных с входом в замкнутое пространство, необходимо провести обязательный анализ атмосферы с помощью газоизмерительного оборудования.
 
-` ` **Замкнутые пространства опасны.**  
+### **Замкнутые пространства опасны.**  
 
 ` ` Без должной подготовки и соответствующего оснащения запрещено проникать в подобные места. Зачастую работник подвергается опасности, даже просто поместив голову внутрь входного отверстия. Если ограниченное пространство содержит токсичный газ, работники, которые находятся рядом со входом, также подвергаются риску, так как токсичный газ может находиться под давлением из-за тепла внутри или при утечке. По этой причине концентрация токсичных газов вблизи входа в замкнутое пространство может быть достаточно высока.
 
-#### Опасное состояние атмосферы. 
+### **Опасное состояние атмосферы.** 
 ` ` Атмосфера в замкнутом пространстве может быть опасной по нескольким причинам. Воздух может содержать слишком мало или слишком много кислорода, может быть токсичным или взрывоопасным. Атмосфера каждого замкнутого пространства по степени опасности должна быть классифицирована как высокая, средняя или низкая.
 
 - Степень опасности: **Опасная атмосфера.**
@@ -63,6 +64,6 @@ submenu: true
 ` ` Наша команда включает в себя высококвалифицированных операторов замкнутого пространства, использующих передовое оборудование и технологии мирового уровня, а также инновационные решения для входа и спасения людей. 
 
 
-` ` *Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.*
+` ` ***Опыт в управлении сложными работами, в сложных условиях является ключевым в предоставлении инновационных решений для всех видов инженерных проектов.***
 
 ` ` Мы понимаем важность работы в критических временных рамках и в интенсивных рамках крупных закрытых предприятиях. Работы по интеграции с более широкими услугами для достижения наиболее эффективных результатов в проектах.
