--- a/2.2_.md
+++ b/2.2_.md
@@ -41,7 +41,7 @@ submenu: true
 - Степень опасности: **Неопасная атмосфера.** 
 Атмосфера, которая содержит чистый воздух, и при этом отсутствует опасность ухудшения его свойств во время работы.
 
-` ` **Основные** (первостепенные) **требования безопасности** при работе в замкнутом пространстве:  
+**Основные** (первостепенные) **требования безопасности** при работе в замкнутом пространстве:  
 — работы в замкнутом пространстве необходимо выполнять, только если отсутствует альтернативный способ выполнения работы без привлечения человека;  
 — произведено отключение всех видов источников энергии и коммуникаций;  
 — постоянно контролируется состояние газовоздушной среды;  
@@ -49,14 +49,14 @@ submenu: true
 — емкости и оборудование заземлены;  
 — работник, входящий в замкнутое пространство для забора проб воздуха, должен использовать средство индивидуальной защиты органов дыхания (автономный дыхательный аппарат или шланговый противогаз).
 
-` ` **Работники допускаются к работе в ОЗП после проведения:** *(Постановление Минтруда России и Минобразования России от 13 января 2003 г. {% include el-pdf.html text="№ 1/29" name="Постановление № 1-29.pdf" %} «Об утверждении Порядка обучения по охране труда и проверки знаний требований охраны труда работников организаций» (зарегистрировано Министерством юстиции Российской Федерации 12 февраля 2003 г., регистрационный № 4209) с изменениями, внесенными приказом Минтруда России и Минобрнауки России от 30 ноября 2016 г. № 697н/1490 (зарегистрирован Министерством юстиции Российской Федерации 16 декабря 2016 г., регистрационный № 44767))*  
+**Работники допускаются к работе в ОЗП после проведения:** *(Постановление Минтруда России и Минобразования России от 13 января 2003 г. {% include el-pdf.html text="№ 1/29" name="Постановление № 1-29.pdf" %} «Об утверждении Порядка обучения по охране труда и проверки знаний требований охраны труда работников организаций» (зарегистрировано Министерством юстиции Российской Федерации 12 февраля 2003 г., регистрационный № 4209) с изменениями, внесенными приказом Минтруда России и Минобрнауки России от 30 ноября 2016 г. № 697н/1490 (зарегистрирован Министерством юстиции Российской Федерации 16 декабря 2016 г., регистрационный № 44767))*  
 а) обучение требованиям охраны труда в организациях, аккредитованных в установленном порядке, (далее - обучающие организации) и (или) у работодателя;   
 б) обучения безопасным методам и приемам выполнения работ;    
 в) стажировки на рабочем месте;   
 г) инструктажей по охране труда;   
 д) обучения оказанию первой помощи пострадавшим. 
 
-` ` Работники, допускаемые к работам в ОЗП, делятся на следующие 3 группы по безопасности работ в ОЗП:   
+### Работники, допускаемые к работам в ОЗП, делятся на следующие 3 группы по безопасности работ в ОЗП:   
 - **1 группа** - работники, допускаемые к непосредственному выполнению работ в ОЗП в составе бригады или под непосредственным контролем работника, назначенного приказом работодателя; понимающие риски, рабочие процедуры и план производства работ, и прочие необходимые организационно-технические документы; умеющие проводить самоспасение и под руководством работников.   
 - **2-й группы** проводить работы по спасению и эвакуации других работников; умеющие пользоваться средствами коллективной и индивидуальной защиты; умеющие поддерживать связь со наблюдающим (работник, находящейся снаружи ОЗП, осуществляющий контроль за работниками, работающими в ОЗП); 2 группа - ответственные исполнители работ в ОЗП; наблюдающие; специалисты по оценке параметров среды ОЗП, в т.ч. загазованности; работники, ответственно руководящие спасением и эвакуацией, а также сами квалифицированно выполняющие эвакуацию и спасение (далее – специалисты по спасению); а также мастера, бригадиры, осматривающие место проведения работ, обеспечивающие подготовку к работе, умеющие определить опасности перед началом работ; обеспечивающие безопасность работ в ОЗП во время их выполнения.   
 - **3 группа** - работники, назначаемые работодателем ответственными за безопасную организацию и проведение работ в ОЗП (далее – работники 3 группы); должностные лица, имеющие право выдавать наряд-допуск.
