--- a/7.1.2.0_evk.md
+++ b/7.1.2.0_evk.md
@@ -12,7 +12,7 @@ layout: buffer
 Данный метод позволяет в кратчайшие сроки, и что самое важное, с высокой точностью указать все места протечек покрытия. На сегодняшний день ЭВК - единственный способность находить повреждения гидроизоляции, прежде чем вода в больших количествах накопится под кровельным покрытием.
 
 ### Тестирование Мембраны Плоской Крыши
-{% include el-figure.html url="buffer/7.1.2.0_fig1.png" title="Испытания Плоских Кровельных Материалов" %}
+{% include el-figure.html url="img/evk/EVK.006.png" title="Испытания Плоских Кровельных Материалов" %}
 
 *Детектор протечек Buckleys Wet Roof Pro’ может определить и обнаружить местонахождение утечки внутри плоской крыши.*
 
