--- a/7.1.2.3_Buckleys.md
+++ b/7.1.2.3_Buckleys.md
@@ -6,13 +6,13 @@ submenu: false
 layout: buffer
 ---
 
-![](/img/0/7.1.2.3.0.jpg)
+![](/img/evk/EVK.001.jpg)
 
 ## Мокрые Крыши Про
 **Детектор протечек Buckleys Wet Roof Pro’** был разработан, чтобы найдите протечки на плоских кровельных системах, которые включают диэлектрические мембранные накладки как однополые, асфальт, битум и жидкие применяемые на крышах.  
 **Детектор протечек Buckleys Wet Roof Pro’** использует проводящие свойства воды (от любого дождя или шланга), чтобы точно определить протечки.
 
-![](/img/0/7.1.2.3.1.jpg)
+![](/img/evk/EVK.002.jpg)
 
 ` ` Комплект состоит из двух основных элементов: блока генератора и блока детектора. Блок генератора создает электрическое поле через поверхность крыши, через провод, границы который расположен вокруг периметра испытуемого участка и соединенный к положительному стержню на блоке генератора. Отрицательная клемма подключена к земле на структуре здания.  
 
@@ -20,7 +20,7 @@ layout: buffer
 
 ` ` **Способный испытывать до 400 m2 в день, блок детектора направляет оператора к точному положению протечки путем измерения разности напряжений между зондами.**
 
-![](/img/0/7.1.2.3.2.jpg)
+![](/img/evk/EVK.003.jpg)
 
 **Особенности**
 * Тест до 400 м2 в день  
@@ -40,6 +40,6 @@ layout: buffer
 * Диапазон температур от +4°C до +40°C  
 
 
-![](/img/0/7.1.2.3.3.jpg)  
-![](/img/0/7.1.2.3.4.jpg)  
-![](/img/0/7.1.2.3.5.jpg)
+![](/img/evk/EVK.004.jpg)  
+![](/img/evk/EVK.009.png)  
+![](/img/evk/EVK.005.jpg)
