--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -11,7 +11,7 @@ submenu: true
 
 
 ### Наша компания является дилерами компании **HIGH SAFETY**
-![](/img/toplogo/3.1.0.jpg)
+![](/img/toplogo/3.1.0.jpg){:class="uk-align-left uk-width-1-2"}
 
 ` ` Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
 
