--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -13,11 +13,13 @@ submenu: true
 ### Наша компания является дилерами компании **HIGH SAFETY**
 ![](/img/toplogo/3.1.0.jpg){:class="uk-align-left uk-width-1-2"}
 
-` ` Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
+Двухтросовая горизонтальная гибкая анкерная линия **GALEREYA** компании **HIGH SAFETY** служит для обеспечения безопасности работ на высоте на жд и авто цистернах, вагонах. Линия может быть установлена «под потолок» на любую высоту от рабочего места пользователя: к кровельным перекрытиям помещений, ангаров, цехов.   
 
 Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}    
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России   
- 
+
+###### отменяет действие align-left и align-right
+
 #### Преимущества системы
 
 ***ФОТО***  
