--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -21,7 +21,7 @@ submenu: true
 ###### отменяет действие align-left и align-right
 
 #### Преимущества системы
-
+![](/img/sss/3.1.1.jpg)
 ***ФОТО***  
 • Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии.   
 • До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %}.   
@@ -29,7 +29,7 @@ submenu: true
 • Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6).   
 
 #### Состав системы
-
+![](/img/sss/3.FHL201.gif)
 ***ФОТО***
 #### Мобильная анкерная точка (арт. FHL201)  
 Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии. Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
