--- a/3.1_GALEREYA.md
+++ b/3.1_GALEREYA.md
@@ -20,7 +20,7 @@ submenu: true
 
 ###### отменяет действие align-left и align-right
 
-#### Преимущества системы
+#### **Преимущества системы**
 ![](/img/sss/3.1.1.jpg)
 ***ФОТО***  
 • Благодаря уникальной конструкции мобильной анкерной точки допускается любой угол отклонения пользователя от линии.   
@@ -28,46 +28,63 @@ submenu: true
 • Установка под потолком на любой высоте от пользователя.  
 • Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку Ex: IIC Ga T6).   
 
-#### Состав системы
-![](/img/sss/3.FHL201.gif)
+#### **Состав системы**
+
 ***ФОТО***
-#### Мобильная анкерная точка (арт. FHL201)  
+#### Мобильная анкерная точка (арт. FHL201) 
+![](/img/sss/3.FHL201.gif){:class="uk-align-left uk-width-1-3"}
 Мобильная анкерная точка оснащена 4-мя роликами, что позволяет ей беспрепятственно проходить через промежуточные точки анкерной линии. Благодаря специальной конструкции тележки допускается любой угол отклонения пользователя от вертикали при движении пользователя вдоль рабочей площадки без необходимости отсоединения анкерной точки от линии.    
 Материал: нержавеющая сталь
 
+###### отменяет действие align-left и align-right
+
 ***ФОТО***
 #### Амортизирующее устройство (арт. FHL205)  
+![](/img/sss/3.FHL205.gif){:class="uk-align-left uk-width-1-3"}
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса.  
 Материал: нержавеющая сталь
 
+###### отменяет действие align-left и align-right
 ***ФОТО***
-#### Промежуточный структурный анкер (арт.FHL202)  
+#### Промежуточный структурный анкер (арт.FHL202)
+![](/img/sss/3.FHL202.gif){:class="uk-align-left uk-width-1-3"}
 Служит в качестве направляющей стального троса, а также дополнительной анкерной точкой крепления. Устанавливается через каждые 12 метров.   
 Материал: нержавеющая сталь
  
+###### отменяет действие align-left и align-right 
 ***ФОТО***
-#### Натяжитель для троса (арт. FHL206)  
+#### Натяжитель для троса (арт. FHL206)
+![](/img/sss/3.FHL206.gif){:class="uk-align-left uk-width-1-3"}
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.
 Материал: нержавеющая сталь
- 
+
+###### отменяет действие align-left и align-right
 ***ФОТО***
-#### Ролик-натяжитель (арт. FHL203)  
+#### Ролик-натяжитель (арт. FHL203) 
+![](/img/sss/3.FHL203.gif){:class="uk-align-left uk-width-1-3"}
 Позволяет осуществлять установку троса без разрыва - единым участком, а также обеспечивает равномерное натяжение каждой стороны анкерной линии.  
 Материал: нержавеющая сталь, высоко прочный пластик
- 
+
+###### отменяет действие align-left и align-right
 ***ФОТО***
-#### Крайний структурный анкер, нерж.сталь (арт. FHL207)  
+#### Крайний структурный анкер, нерж.сталь (арт. FHL207) 
+![](/img/sss/3.FHL207.png){:class="uk-align-left uk-width-1-3"}
 Применяется для монтажа линии к элементам постоянной конструкции.   
 Материал: нержавеющая сталь
- 
+
+###### отменяет действие align-left и align-right
 ***ФОТО***
 #### Цанговый зажим (ZG002)  
+![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
- 
+
+###### отменяет действие align-left и align-right
 ***ФОТО***
-#### Трос анкерной линии (арт. SSR001)    
+#### Трос анкерной линии (арт. SSR001)  
+![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
 Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
- 
+
+###### отменяет действие align-left и align-right
 
 
 #### В нашей деятельности мы используем только профессиональное оборудование и инструменты, имеющие поверки и необходимые сертификаты качества.
