--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -9,75 +9,80 @@ submenu: true
 
 {% include el-slider.html  %}
 
-***ФОТО***
-
 ### Наша компания является дилерами компании **HIGH SAFETY**
-
+![](/img/toplogo/3.2.0.jpg){:class="uk-align-left uk-width-1-2"}
 
 Горизонтальная гибкая анкерная линия **GORIZONT** компании **HIGH SAFETY** - наиболее простое и доступное решение для организации безопасной работы на высоте на любых типах горизонтальных поверхностей (чистка крыш, кровельные работы) на уровне пояса или над головой. 
 
 Сертификат соответствия {% include el-pdf.html text="TP TC 019/2011" name="TP TC 019_2011.pdf" %}  
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
 
- 
-### Преимущества системы  
-***ФОТО***
+###### отменяет действие align-left и align-right
+### **Преимущества системы*  
+![](/img/sss/3.2.1.gif)
  
 •	Установка анкерной линии при факторе падения 0, 1, 2;  
 •	До 4-х одновременно работающих пользователей на одном участке линии. Испытано по ГОСТ {% include el-pdf.html text="EN/TS 16415-2015" name="6.3.1. ГОСТ EN TS 16415-2015.pdf" %};  
 •	Возможен монтаж с любым шагом установки промежуточных анкеров (до 12 м). Доступны также готовые «пакетные решения»: 12, 24, 36, 48, 60, 72 и 84 метров линии;  
 •	Возможность самостоятельного монтажа на фермы, балки, опоры, кровли методом охвата или с помощью анкеров.   
 •	Анкерная линия может быть установлена в пожароопасных и взрывоопасных зонах, что подтверждается сертификатом. Все компоненты линии имеют маркировку: IIC Ga T6 (взрывозащита: IIC Ga T6).
- 
+###### отменяет действие align-left и align-right 
 
  
-### Состав системы
+### **Состав системы**
+![](/img/sss/3.FHL101.gif){:class="uk-align-left uk-width-1-3"}
 
-***ФОТО***
 #### Мобильная анкерная точка, гальв. сталь (FHL101)
 Обеспечивает беспрепятственное прохождение промежуточных анкерных точек анкерной линии без необходимости отсоединения троса.   
 Материал: гальв. сталь.
+###### отменяет действие align-left и align-right
 
-***ФОТО***
 #### Промежуточный структурный анкер, нерж. сталь (FHL102)  
+![](/img/sss/3.FHL102.gif){:class="uk-align-left uk-width-1-3"}
 •  Возможность свободного перемещения по всей длине анкерной линии.  
 •  Дополнительная точка опоры.  
 •  Возможность установки на стенах зданий, крышах и кровлях.  
 Материал: нержавеющая сталь.
- 
-***ФОТО***  
-#### Концевой структурный анкер 1-точечный, нерж. сталь (FHL103)  
+###### отменяет действие align-left и align-right
+  
+#### Концевой структурный анкер 1-точечный, нерж. сталь (FHL103)
+![](/img/sss/3.FHL103.gif){:class="uk-align-left uk-width-1-3"}
 Используется при установке линии на анкерные столбы.   
 Материал: нержавеющая сталь.
- 
-***ФОТО***  
-#### Концевой структурный анкер 2-точечный, нерж. сталь (FHL104)  
+  
+#### Концевой структурный анкер 2-точечный, нерж. сталь (FHL104)
+![](/img/sss/3.FHL104.gif){:class="uk-align-left uk-width-1-3"}
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
 Материал: нержавеющая сталь.
-
-***ФОТО***  
-#### Амортизирующее устройство (FHL105)  
+###### отменяет действие align-left и align-right
+ 
+#### Амортизирующее устройство (FHL105)
+![](/img/sss/3.FHL105.gif){:class="uk-align-left uk-width-1-3"}
 Амортизатор закрытого типа оснащен цветовым индикатором натяжения, что исключает возможность ошибки при монтаже анкерной линии. Графическая информация, нанесенная на маркировке изделия поможет легко определить правильную индикацию для требуемого уровня натяжения троса. 
 Материал: нержавеющая сталь
+###### отменяет действие align-left и align-right
 
-***ФОТО***
-#### Натяжитель для троса (FHL106)  
+#### Натяжитель для троса (FHL106)
+![](/img/sss/3.FHL106.gif){:class="uk-align-left uk-width-1-3"}
 Натяжитель для троса позволяет легко натянуть трос до требуемого уровня.   
 Материал: нержавеющая сталь
+###### отменяет действие align-left и align-right
 
-***ФОТО***
-#### Промежуточный структурный анкер угловой (FHL107)  
+#### Промежуточный структурный анкер угловой (FHL107)
+![](/img/sss/3.FHL107.gif){:class="uk-align-left uk-width-1-3"}
 Угловой структурный анкер обеспечивает возможность монтажа анкерной линии при любой требуемой геометрии установки, а также обеспечивает беспрепятственное прохождение угловых участков мобильной анкерной точкой.   
 Материал: нержавеющая сталь
+###### отменяет действие align-left и align-right
 
-***ФОТО***
-#### Цанговый зажим (ZG002)  
+#### Цанговый зажим (ZG002)
+![](/img/sss/3.ZG002.gif){:class="uk-align-left uk-width-1-3"}
 Выполнен из нержавеющей стали. Устанавливается на конец троса и присоединяется к натяжителю троса.
- 
-***ФОТО***
-#### Трос из нержавеющей стали (SSR001)  
-Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
+###### отменяет действие align-left и align-right
 
+#### Трос из нержавеющей стали (SSR001) 
+![](/img/sss/3.SSR001.gif){:class="uk-align-left uk-width-1-3"}
+Трос Ø8 миллиметров выполнен из нержавеющей стали, что повышает надежность и безопасность.
+###### отменяет действие align-left и align-right
 
 ### Упаковка анкерной линии  
 Готовое решение предусматривает подробную инструкцию по сборке системы, комплект эксплуатационных документов и гарантийный талон на анкерную линию.
