--- a/3.2_GORIZONT.md
+++ b/3.2_GORIZONT.md
@@ -18,7 +18,7 @@ submenu: true
 {% include el-pdf.html text="Заключение Минпромторга" name="6.3.1.1. Заключение Минпромторга.pdf" %} России
 
 ###### отменяет действие align-left и align-right
-### **Преимущества системы*  
+### **Преимущества системы**  
 ![](/img/sss/3.2.1.gif)
  
 •	Установка анкерной линии при факторе падения 0, 1, 2;  
@@ -49,7 +49,8 @@ submenu: true
 ![](/img/sss/3.FHL103.gif){:class="uk-align-left uk-width-1-3"}
 Используется при установке линии на анкерные столбы.   
 Материал: нержавеющая сталь.
-  
+###### отменяет действие align-left и align-right
+
 #### Концевой структурный анкер 2-точечный, нерж. сталь (FHL104)
 ![](/img/sss/3.FHL104.gif){:class="uk-align-left uk-width-1-3"}
 Используется при монтаже анкерной линии к постоянной конструкции (на стены зданий, крышах и кровлях).  
