--- a/3.3_MOST.md
+++ b/3.3_MOST.md
@@ -30,44 +30,44 @@ submenu: true
 #### **Состав системы**
 
 #### Мобильная анкерная точка (арт. RHL301)
-![](/img/sss/3.FHL301.gif){:class="uk-align-left uk-width-1-4"}    
+![](/img/sss/3.RHL301.gif){:class="uk-align-left uk-width-1-4"}    
 Имеет конструкцию, позволяющую использовать его совместно с различными типами карабинов - увеличенное кольцо для крепления. Корпус анкерной точки (тележки) может быть выполнен как в серебристом цвете, так и в золотом, что позволяет легко обозначить его в условиях плохой видимости.  Роликовые колеса тележки из капролона обеспечивают бесперепятсвенное движение тележки по всей длине линии.     
 Материал: алюминий. 
 ###### отменяет действие align-left и align-right
  
 #### Сегмент анкерной направляющей (арт. RHL302)
-![](/img/sss/3.FHL302.gif){:class="uk-align-left uk-width-1-4"}
+![](/img/sss/3.RHL302.gif){:class="uk-align-left uk-width-1-4"}
 Сегмент анкерной направляющей имеет длину 1, 2 или 3 м. Благодаря этому возможна установка на любую длину и геометрию. 
 Может быть выполнен в серебристом или черном цвете, благодаря чему органично вписывается в оформление современных фасадов зданий.   
 Материал: алюминий.
 ###### отменяет действие align-left и align-right
  
 #### Соединитель сегментов (арт. RHL303)
-![](/img/sss/3.FHL303.gif){:class="uk-align-left uk-width-1-4"}
+![](/img/sss/3.RHL303.gif){:class="uk-align-left uk-width-1-4"}
 Предназначен для соединения рельсовых сегментов жесткой анкерной линии. Устанавливается на стыке сегментов для надежного соединения участков линии.   
 Материал: алюминий. 
 ###### отменяет действие align-left и align-right
  
 #### Концевой ограничитель (арт. RHL304)
-![](/img/sss/3.FHL304.gif){:class="uk-align-left uk-width-1-4"}
+![](/img/sss/3.RHL304.gif){:class="uk-align-left uk-width-1-4"}
 Концевой ограничитель устанавливается по краям линии (по одному с каждого конца). Предназначен для предотвращения случайного соскальзывания мобильной анкерной точки (тележки) с рельсовго сегмента. Может быть выполнен в серебристом или золотом цвете.   
 Материал: алюминий. 
 ###### отменяет действие align-left и align-right
  
 #### Держатель сегментов (арт. RHL305)
-![](/img/sss/3.FHL305.gif){:class="uk-align-left uk-width-1-4"}
+![](/img/sss/3.RHL305.gif){:class="uk-align-left uk-width-1-4"}
 Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов). Предназначен для крепления анкерной линии к элементам постоянной конструкции.   
 Материал: алюминий.
 ###### отменяет действие align-left и align-right
  
 #### Структурный анкер с крепление одним болтом/ двумя болтами (арт. RHL 306/RHL307)
-![](/img/sss/3.FHL306.gif){:class="uk-align-left uk-width-1-4"}
+![](/img/sss/3.RHL306.gif){:class="uk-align-left uk-width-1-4"}
 Устанавливается на протяжении анкерной линии с шагом 1 м (за исключением участков стыка сегментов). Предназначен для крепления анкерной линии к элементам постоянной конструкции.   
 Материал: нержавеющая сталь.
 ###### отменяет действие align-left и align-right
  
 #### Шкант для соединения сегментов (арт. RHL308)
-![](/img/sss/3.FHL308.gif){:class="uk-align-left uk-width-1-4"}
+![](/img/sss/3.RHL308.gif){:class="uk-align-left uk-width-1-4"}
 Используется при соединении рельсовых сегментов на стыке участков.   
 Материал: нержавеющая сталь.
 ###### отменяет действие align-left и align-right
